some refactoring of date

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1{
 }
 
 .fuckYouBitch {
-    border: 2px solid;
+    border-bottom: 2px solid;
     margin-top: 0;
     height: 5%;
     width: auto;
