--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1 {
     max-width: 100%;
 }
 
-.fuckYouBitch {
+.ShortcutNote {
     display: grid;
     grid-template-columns:  repeat(5, 1fr);
     border-bottom: 2px solid;
@@ -80,7 +80,7 @@ h1 {
 
 }
 
-.fuckYouBitch h1 {
+.ShortcutNote h1 {
 
     grid-column: 1/5;
     grid-row: 1;
@@ -88,11 +88,11 @@ h1 {
 
 }
 
-.fuckYouBitch h1:hover {
+.ShortcutNote h1:hover {
     background: rgba(133, 132, 227, 0.8);
 }
 
-.fuckYouBitch h2 {
+.ShortcutNote h2 {
     font-size: 14pt;
     grid-column: 1/4;
     grid-row: 2;
@@ -101,7 +101,7 @@ h1 {
 
 }
 
-.fuckYouBitch h3 {
+.ShortcutNote h3 {
     font-size: 14pt;
     grid-column: 4/6;
     grid-row: 2;
